--- a/htmlcss/demo/css-reset.css
+++ b/htmlcss/demo/css-reset.css
@@ -14,19 +14,16 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+footer, header, menu, nav, section {
     display: block;
 }
 
-body {
-    line-height: 1;
+a {
+    text-decoration: none;
 }
 
 ol, ul {
