--- a/htmlcss/demo/index.css
+++ b/htmlcss/demo/index.css
@@ -1,9 +1,348 @@
-.ielts-content {
-    margin: 0px auto;
-    border: 1px solid #ccc;
-    width: 380px;
-    min-height: 300px;
+
+html {
+    font-size: 62.5%;
+}
+
+.content {
+    margin: 0 auto;
+    width: 375px;
+
+}
+
+.ielts-top-title {
+    height: 44px;
+    width: 100%;
+    font-size: 1.8rem;
+    line-height: 4.4rem;
+    text-align: center;
+}
+
+.ielts-top-content {
+    height: 188px;
+    width: 100%;
     background: url("img/top-bg.png") no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
+    position: relative;
+}
+
+.ielts-top-circle {
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+    text-align: center;
+    line-height: 15px;
+    border-radius: 20px;
+    display: inline-block;
+    background-color: rgb(0, 78, 131);
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    color: #ffffff;
+
+}
+
+.ielts-top-span {
+    width: 40px;
+    height: 10px;
+    padding-top: 6px;
+    display: inline-block;
+    text-align: center;
+
+}
+
+.ielts-top-img {
+    width: 89px;
+    height: 62px;
+    background: url("img/top-img.png") no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+    position: absolute;
+    top: 63px;
+    left: 143px;
+}
+
+.ielts-top-vr {
+    width: 38px;
+    height: 20px;
+    display: inline-block;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.ielts-content {
+    width: 100%;
+    min-height: 200px;
+}
+
+.nav-title {
+    height: 41px;
+    width: 100%;
+}
+
+.nav-title-li {
+    width: 50px;
+    height: 40px;
+    float: left;
+    margin-left: 35px;
+    text-align: center;
+    color: rgb(102, 102, 102);
+    font-size: 12px;
+    line-height: 40px;
+}
+
+.nav-title-li-click {
+    width: 50px;
+    height: 40px;
+    float: left;
+    margin-left: 35px;
+    text-align: center;
+    color: rgb(102, 102, 102);
+    font-size: 12px;
+    line-height: 40px;
+    color: rgb(35, 205, 119);
+    border-bottom: 1px solid #23cd77;
+}
+
+.nav-content {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 1px;
+    background-color: rgb(240, 240, 240);
+
+}
+
+.nav-content-div {
+    width: 100%;
+}
+
+/*主页css*/
+.pagemain-hot {
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.pagemain-hotone {
+    width: 37px;
+    height: 20px;
+    display: inline-block;
+    background-color: rgb(255, 76, 76);
+    border-radius: 3px;
+    position: absolute;
+    left: 10px;
+    top: 15px;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    color: #ffffff;
+
+}
+
+.pagemain-hot-title {
+    font-size: 12px;
+    line-height: 50px;
+    padding-left: 58px;
+}
+
+.pagemain-content {
+    width: 100%;
+    min-height: 40px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    font-size: 14px;
+
+}
+
+.pagemain-content-l {
+    width: 4px;
+    height: 15px;
+    border-radius: 2px;
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 10px;
+}
+
+.pagemain-content-title {
+    line-height: 30px;
+    font-size: 14px;
+
+}
+
+.pagemain-content-int {
+    padding-bottom: 10px;
+    padding-left: 10px;
+
+}
+
+.pagemain-content-word {
+    min-height: 26px;
+    line-height: 26px;
+    padding-right: 10px;
+}
+
+.pagemain-content-greenword {
+    width: 60px;
+    height: 20px;
+    display: inline-block;
+    border: 1px solid rgb(35, 205, 119);
+    border-radius: 2px;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    color: rgb(35, 205, 119);
+}
+
+.pagemain-content-word-span {
+    font-size: 15px;
+    color: rgb(102, 102, 102);
+}
+
+.pagemain-content-address {
+    height: 45px;
+    border-top: 1px solid rgb(232, 232, 232);
+    line-height: 45px;
+    padding-left: 10px;
+    position: relative;
+
+}
+
+.pagemain-content-address a {
+    background: url("img/point.png") no-repeat;
+    width: 30px;
+    height: 30px;
+    -webkit-background-size: contain;
+    background-size: contain;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 10px;
+
+}
+
+.pagemain-content-img {
+    margin: 5px 0px;
+    width: 356px;
+    height: 178px;
+
+}
+
+.active {
+    margin-left: 10px;
+}
+
+.active span {
+    font-size: 12px;
+}
+
+.course {
+    position: relative;
+}
+
+.allcourse {
+    width: 80px;
+    color: rgb(102, 102, 102);
+    position: absolute;
+    right: 0;
+    top: 16px;
+}
+
+.course-img a img {
+    margin: 5px 10px;
+    width: 356px;
+    height: 178px;
+}
+
+.course-img div {
+    height: 30px;
+}
+
+.course-title {
+    padding-left: 20px;
+    font-size: 16px;
+}
+
+.course-price {
+    position: absolute;
+    right: 20px;
+    color: rgb(255, 76, 76);
+}
+
+.course-discount {
+    position: absolute;
+    right: 70px;
+    font-size: 12px;
+    color: rgb(166, 166, 166);
+    text-decoration: line-through;
+    padding-top: 2px;
+}
+
+.course-img {
+    position: relative;
+}
+
+.course-online,
+.course-offline {
+    position: absolute;
+    width: 355px;
+    height: 45px;
+    bottom: 40px;
+    left: 10px;
+    background: url("img/bgc.png");
+}
+
+.online-title {
+    color: white;
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    padding-left: 20px;
+    background: url("img/video.png") no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+}
+
+.online-num {
+    color: white;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+
+}
+.offline-title{
+    color: white;
+    position: absolute;
+    left: 10px;
+    top: 5px;
+}
+
+.offline-add{
+    color: white;
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+
+.green {
+    background-color: rgb(35, 205, 119);
+}
+
+.red {
+    background-color: rgb(255, 76, 76);
+}
+
+.blue {
+    background-color: rgb(76, 195, 255);
+}
+
+.clearfix:after {
+    display: block;
+    height: 0;
+    clear: both;
+    content: ' ';
+    visibility: hidden;
 }
