--- a/htmlcss/demo/index.css
+++ b/htmlcss/demo/index.css
@@ -82,6 +82,11 @@ html {
     margin-bottom: 4px;
 }
 
+.nav-title ul li {
+    cursor: pointer;
+
+}
+
 .nav-title-li {
     width: 50px;
     height: 40px;
@@ -568,6 +573,108 @@ html {
 .teacher-rlevel img {
     width: 11px;
     height: 12px;
+}
+
+.env {
+    background-color: #fff;
+}
+
+.env-content {
+    width: 375px;
+    padding-left: 10px;
+}
+
+.env-contrntl {
+    width: 175px;
+    float: left;
+}
+
+.env-contrntl img,
+.env-contrntr img {
+    width: 175px;
+    height: 86px;
+}
+
+.env-contrntr span,
+.env-contrntl span {
+    width: 175px;
+    height: 30px;
+    line-height: 30px;
+    display: inline-block;
+    text-align: center;
+}
+
+.env-contrntr {
+    width: 175px;
+    float: left;
+    padding-left: 10px;
+}
+
+.bottom-refer {
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    border-top: 1px solid rgb(221, 221, 221);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+.refer-l {
+    width: 74px;
+    height: 100%;
+    border-right: 1px solid rgb(221, 221, 221);
+    float: left;
+}
+
+.refer-limg,
+.refer-bimg {
+    width: 100%;
+    height: 45%;
+    display: inline-block;
+    text-align: center;
+}
+
+.refer-limg img,
+.refer-bimg img,
+.refer-rimg img {
+    width: 20px;
+    height: 20px;
+    padding-top: 7px;
+}
+
+.refer-lword,
+.refer-bword {
+    width: 100%;
+    height: 50%;
+    display: inline-block;
+    text-align: center;
+    color: rgb(102, 102, 102);
+}
+
+.refer-rword {
+    color: #ffffff;
+
+}
+
+.refer-b {
+    width: 74px;
+    height: 100%;
+    float: left;
+}
+
+.refer-r {
+    width: 226px;
+    height: 100%;
+    background-color: rgb(0, 204, 136);
+    float: right;
+    text-align: center;
+    line-height: 58px;
+}
+
+.empty {
+    width: 100%;
+    height: 50px;
 }
 
 .clearfix:after {
