--- a/htmlcss/demo/index.css
+++ b/htmlcss/demo/index.css
@@ -613,13 +613,12 @@ html {
 }
 
 .bottom-refer {
-    width: 100%;
+    width: 375px;
     height: 50px;
     background-color: #fff;
     border-top: 1px solid rgb(221, 221, 221);
     position: fixed;
     bottom: 0;
-    left: 0;
 }
 
 .refer-l {
