--- a/slide/index.css
+++ b/slide/index.css
@@ -44,3 +44,17 @@ ul, li {
     position: relative;
 }
 
+@keyframes fadeOutRight {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+}
+
+.fadeOutRight {
+  animation-name: fadeOutRight;
+}
