--- a/animation/css/demo5.css
+++ b/animation/css/demo5.css
@@ -12,11 +12,43 @@ li {
     position: relative;
 }
 
-.item {
-    opacity: 0;
+.uls {
+    width: 2250px;
     position: absolute;
     top: 0;
     left: 0;
+    display: flex;
+    transition: all 0.5s linear 0s;
+}
+
+.item {
+    /* opacity: 0;  */
+    width: 750px;
+    flex: 1;
+}
+
+.prev,
+.next {
+    display: block;
+    width: 25px;
+    height: 50px;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    line-height: 50px;
+    margin-top: -25px;
+    font-size: 24px;
+    color: white;
+}
+
+.prev {
+    left: 0;
+    top: 50%;
+}
+
+.next {
+    right: 0;
+    top: 50%;
 }
 
 .point {
@@ -53,15 +85,17 @@ li {
 @keyframes show {
     from {
         opacity: 0;
+        transform: translate3d(100%, 0, 0);
     }
     to {
         opacity: 1;
+        transform: none;
     }
 }
 
 .show {
     animation-name: show;
-    animation-duration: 1s;
+    animation-duration: 2s;
     animation-fill-mode: forwards;
 }
 
